@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-10-27 (CVS):
+    * jsh2color (Makefile, MSVC project files): Changed stack reserve size to
+      4 MB for windows builds.
+
 2010-10-24 (CVS):
     * jsh2color/ltface.c (SINGLEMAP): TEX_SPECIAL cases don't fit into 18*18
       lightmap size and the code still wants to play them (see TestLightFace()
